
- Optimized SC.Object.objectForPropertyPath() to use less memory.

- You can now pass a string path as a :target and it will be converted to an
  object. (thanks Peter Blazejewicz!)
  
- SC.CollectionView will now call destroyObject on the content array instead of removeObject if that method is defined.  This allows you to implement arrays with a more specific handling of the destroyObject method.

- Added support for checkbox views in ListItemViews.  Since this is a fairly
  common requirement, checkbox views are now built in.

== sproutcore 0.9.14

- Fixed bug in SC.SourceListView that could incorrectly hide groups. Closes #57. (Thanks mguymon)

- Fixed bug in SC.ObjectController that would sometimes not commit all pending
  changes because the model object would clear the changes hash.  Also a test
  for this was added.  Closes #66.  (Thanks YoNoSoyTu!)
  
- default index.html now has text/javascript added to script tags. Closes #71
- server.js now handles namespaced prefixes. Closes #74

- label_view now defaults to the span tag.  Closes #75.  (Thanks Erich!)

- Added support for posting data in both URL-encoded and JSON formats via
  SC.server.  This makes for a much cleaner round-trip.  To use this, set the
  postFormat: property to SC.JSON_FORMAT in SC.server.  Closes #49. 
  (Thanks Mauris Lamers!)
  
- The newRecord property is now set to false once a record has been 
  successfully sent back to the server.  A new internal property tracks when 
  you are waiting on a record to be created on the server and refuses to 
  submit it a second time. Closes #81 (Thanks Gareth!)
  
- All internal calls for arguments.callee.base.apply() have now been switched 
  to sc_super().  This means you MUST use version 0.9.13 or later of the build 
  tools to work with the javascript.

- Fixed a memory leak in IE that was caused by a self-reference to document. 
  (Thanks Juan)

- Improved documentation for a variety of classes. (Thanks gskluzacek)
